# servic-client-refactor

./: .env.example  .gitignore  README.md  pyproject.toml
src/: cache.py  client.py  schema.py  utilities.py
src/services/: authinator.py  data_catalogue.py  service.py
tests/: conftest.py  factories.py  test_authinator.py  test_data_catalogue.py  test_utilities.py
