[tool.poetry]
name = "microservice-rest-client"
version = "0.1.0"
description = ""
authors = ["Thomas Weatherston <thomas.weatherston@atheon.co.uk>"]
readme = "README.md"
packages = [{include = "microservice_rest_client"}]

[tool.poetry.dependencies]
python = "^3.11"
Authlib = "^1.3.1"
pydantic = "^2.8.2"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"
typing-extensions = "^4.12.2"
pytest = "^8.3.1"
pytest-env = "^1.1.3"
pytest-asyncio = "^0.23.8"
pytest-httpx = "^0.30.0"
ruff = "^0.5.4"
pymemcache = "^4.0.0"
polyfactory = "^2.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest_env]
AUTH0_CLIENT_ID="auth0_client_id"
AUTH0_CLIENT_SECRET="auth0_client_secret"
TEST_AUDIENCE="https://test.test.com"
TEST_URL="https://test.test.com"
DATA-CATALOGUE_AUDIENCE="https://data-catalogue.test.com"
DATA-CATALOGUE_URL="https://data-catalogue.test.com"
AUTHINATOR_AUDIENCE="https://authinator.test.com"
AUTHINATOR_URL="https://authinator.test.com"
TOKEN_ENDPOINT="https://test.auth0.com/oauth/token"